Remove deprecated DistExecutor